fixed name of attribute libraries in ContainerRoot
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12242 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 77f0849e19a685b5d7c4b07a7a4af6f54ede7302

--- a/art2_projects/org.kermeta.art2.model.edit/plugin.properties
+++ b/art2_projects/org.kermeta.art2.model.edit/plugin.properties
@@ -74,7 +74,7 @@ _UI_ContainerRoot_repositories_feature = Repositories
 _UI_ContainerRoot_bindings_feature = Bindings
 _UI_ContainerRoot_dataTypes_feature = Data Types
 _UI_ContainerRoot_portTypes_feature = Port Types
-_UI_ContainerRoot_librariy_feature = Librariy
+_UI_ContainerRoot_libraries_feature = Libraries
 _UI_ContainerRoot_messageHub_feature = Message Hub
 _UI_ContainerRoot_mBindings_feature = MBindings
 _UI_PortType_synchrone_feature = Synchrone
