The bundle is now compiled using maven
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12271 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: cf218f5b47ec4d834941d06e4c028902145df981

--- a/log4j_projects/org.kermeta.slf4j.eclipse/build.properties
+++ b/log4j_projects/org.kermeta.slf4j.eclipse/build.properties
@@ -1,6 +1,6 @@
 source.. = src/,\
-           extracted_src/
-output.. = bin/
+           target/extracted_src/
+output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                kermeta_log4j_configuration.xml,\
