--- a/log4j_projects/org.kermeta.slf4j.eclipse/plugin.xml
+++ b/log4j_projects/org.kermeta.slf4j.eclipse/plugin.xml
@@ -7,5 +7,14 @@
             class="org.kermeta.slf4j.eclipse.preferences.PreferenceInitializer">
       </initializer>
    </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            category="fr.irisa.triskell.kermeta.ui.preferences.KermetaPreferencePage"
+            class="org.kermeta.slf4j.eclipse.preferences.LoggingPreferencePage"
+            id="org.kermeta.slf4j.eclipse.preferences.LoggingPreferencePage"
+            name="Logging Preferences">
+      </page>
+   </extension>
 </plugin>
 
