git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12273 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: fa503acee576e28954cc6d0eb33aa854e6832902

--- a/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
+++ b/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
@@ -226,4 +226,32 @@
 		</dependency>
 	</dependencies>
 
+	<repositories>
+
+        <repository>
+            <id>Kermeta Public</id>
+            <url>http://www.kermeta.org/maven2</url>
+        </repository>
+        <repository>
+            <id>Kermeta Public SnapShots</id>
+            <url>http://www.kermeta.org/maven2-snapshots</url>
+        </repository>
+    </repositories>
+
+
+
+    <distributionManagement>
+        <repository>
+            <id>tipimouss-local-maven-repository</id>
+            <name>Tipimouss Local release repository</name>
+            <url>file:/var/www/html/maven2</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
+        <snapshotRepository>
+            <id>tipimouss-local-maven-repository</id>
+            <name>Tipimouss Local  snapshot repository</name>
+            <url>file:/var/www/html/maven2-snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
