fixed dependency to preference bundle
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12283 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: f1686037037ba21a38e8d526749f240b894abd77

--- a/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
+++ b/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
@@ -106,7 +106,7 @@
  							org.eclipse.core.runtime,
  							org.eclipse.core.resources,
  							org.eclipse.core.jobs,
- 							org.eclipse.core.runtime.preferences
+ 							org.eclipse.equinox.preferences
                         </Require-Bundle>
                         <Import-Package>
                         	!org.eclipse.core.*,
