--- a/art2_projects/org.kermeta.art2.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.root/pom.xml
@@ -14,6 +14,7 @@
         <art2.version>2.0.0-SNAPSHOT</art2.version>
         <emf.version>2.6.0</emf.version>
         <scala.version>2.8.0</scala.version>
+        <bundle.vendor>IRISA/INRIA</bundle.vendor>
     </properties>
     
     <dependencies>
