git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12300 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 882fa0ec27ea2ed6be09eaee774259fedbca214d

--- a/art2_projects/org.kermeta.art2.model.editor/plugin.xml
+++ b/art2_projects/org.kermeta.art2.model.editor/plugin.xml
@@ -29,7 +29,7 @@
       <editor
             id="org.kermeta.art2.presentation.Art2EditorID"
             name="%_UI_Art2Editor_label"
-            icon="icons/full/obj16/Art2ModelFile.gif"
+            icon="icons/full/obj16/art2_logo_v2_16.png"
             extensions="art2"
             class="org.kermeta.art2.presentation.Art2Editor"
             contributorClass="org.kermeta.art2.presentation.Art2ActionBarContributor">
