--- a/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
+++ b/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
@@ -98,7 +98,7 @@
                     <instructions>
                         <Export-Package>
                         org.kermeta.slf4j.eclipse.*,
-                        org.slf4j.*;version=1.5.11
+                        org.slf4j.*;version="1.5.11"
                         </Export-Package>
                         <Bundle-Vendor>IRISA/INRIA</Bundle-Vendor>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
@@ -117,8 +117,6 @@
 							!org.eclipse.ui.*,
 							!org.eclipse.jface.*,
 							!org.eclipse.swt.*,
-	                        org.kermeta.art2,
-	                        org.kermeta.art2.framework,
 							org.osgi.framework,		
 							org.apache.log4j.*
                         </Import-Package>
