git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12305 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 51300a2cd72ed1fbadac39714f9c169c690710af

--- a/art2_projects/org.kermeta.art2.framework/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework/pom.xml
@@ -5,7 +5,7 @@
     <packaging>bundle</packaging>
     <name>ART2 :: FRAMEWORK</name>
 
-    <groupId>${parent.groupId}</groupId>
+    <groupId>${project.parent.groupId}</groupId>
     <version>${art2.version}</version>
 
     <parent>
