force version for osgi (otherwise we get a strange null,)   error when compiling on tipimouss
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12306 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 3570e35105d06089baa115cb4ac323cc9da2406f

--- a/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
+++ b/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
@@ -117,7 +117,7 @@
 							!org.eclipse.ui.*,
 							!org.eclipse.jface.*,
 							!org.eclipse.swt.*,
-							org.osgi.framework,		
+							org.osgi.framework;version="[1.5,2)",		
 							org.apache.log4j.*
                         </Import-Package>
                         <Bundle-ClassPath>.</Bundle-ClassPath>
