--- a/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
+++ b/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
@@ -17,6 +17,7 @@
 	        	<includes>
 	          		<include>plugin.xml</include>
 	          		<include>plugin.properties</include>
+	          		<include>kermeta_log4j_configuration.xml</include>
 	        	</includes>
 	      	</resource>
 	      	<resource>
