--- a/sitac_projects/Sitac_android/AndroidManifest.xml
+++ b/sitac_projects/Sitac_android/AndroidManifest.xml
@@ -33,6 +33,13 @@
                    </intent-filter>
         </activity>
         
+        <activity android:name=".EnginesActivity" android:label="@string/app_name">
+                   <intent-filter>
+                                <action android:name="android.intent.action.VIEW" />
+                                <category android:name="android.intent.category.DEFAULT" />
+                   </intent-filter>
+        </activity>
+        
         <activity android:name=".MapWidget" android:label="@string/app_name">
                    <intent-filter>
                                 <action android:name="android.intent.action.VIEW" />
