add scm information for preparing release
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12396 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 312e9697d7da0543c4f09448d4e7c84bb4d28ab6

--- a/utilities_projects/org.kermeta.utils.provisionner4eclipse/pom.xml
+++ b/utilities_projects/org.kermeta.utils.provisionner4eclipse/pom.xml
@@ -175,7 +175,13 @@
             <id>kermeta PublicSnapShots</id>
             <url>http://www.kermeta.org/maven2-snapshots</url>
         </repository>
-     </repositories>
+    </repositories>
+    <scm>
+    	<connection>scm:svn:http://scm.gforge.inria.fr/svn/kermeta/trunk/utilities_projects/org.kermeta.utils.provisionner4eclipse</connection>
+    	<developerConnection>scm:svn:svn+ssh://scm.gforge.inria.fr/svn/kermeta/trunk/utilities_projects/org.kermeta.utils.provisionner4eclipse</developerConnection>
+    	<url>http://gforge.inria.fr/scm/viewvc.php/trunk/utilities_projects/org.kermeta.utils.provisionner4eclipse/?root=kermeta</url>
+  	</scm>
+    
 	<distributionManagement>
 		<repository>
       		<id>tipimouss-local-maven-repository</id>
