add scm information for preparing release
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12397 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: c26ca38a7682421ae1a4665983eae513bdf16b08

--- a/utilities_projects/org.kermeta.utilities.eclipse.jface/pom.xml
+++ b/utilities_projects/org.kermeta.utilities.eclipse.jface/pom.xml
@@ -106,6 +106,12 @@
 	</dependencies>
 	
 	
+    <scm>
+    	<connection>scm:svn:http://scm.gforge.inria.fr/svn/kermeta/trunk/utilities_projects/org.kermeta.utilities.eclipse.jface</connection>
+    	<developerConnection>scm:svn:svn+ssh://scm.gforge.inria.fr/svn/kermeta/trunk/utilities_projects/org.kermeta.utilities.eclipse.jface</developerConnection>
+    	<url>http://gforge.inria.fr/scm/viewvc.php/trunk/utilities_projects/org.kermeta.utilities.eclipse.jface/?root=kermeta</url>
+  	</scm>
+	
 	<repositories>
         <repository>
             <id>kermeta Public</id>
