--- a/utilities_projects/org.kermeta.utilities.eclipse.jface/pom.xml
+++ b/utilities_projects/org.kermeta.utilities.eclipse.jface/pom.xml
@@ -108,7 +108,7 @@
 	
     <scm>
     	<connection>scm:svn:http://scm.gforge.inria.fr/svn/kermeta/trunk/utilities_projects/org.kermeta.utilities.eclipse.jface</connection>
-    	<developerConnection>scm:svn:svn+ssh://scm.gforge.inria.fr/svn/kermeta/trunk/utilities_projects/org.kermeta.utilities.eclipse.jface</developerConnection>
+    	<developerConnection>scm:svn:https://scm.gforge.inria.fr/svn/kermeta/trunk/utilities_projects/org.kermeta.utilities.eclipse.jface</developerConnection>
     	<url>http://gforge.inria.fr/scm/viewvc.php/trunk/utilities_projects/org.kermeta.utilities.eclipse.jface/?root=kermeta</url>
   	</scm>
 	
