git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12400 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 0579423984220489256b673fdb32d77570bf771d

--- a/utilities_projects/org.kermeta.utilities.eclipse.jface/pom.xml
+++ b/utilities_projects/org.kermeta.utilities.eclipse.jface/pom.xml
@@ -108,7 +108,7 @@
 	
     <scm>
     	<connection>scm:svn:http://scm.gforge.inria.fr/svn/kermeta/tags/utilities.eclipse.jface-2.0.0</connection>
-    	<developerConnection>scm:svn:https://scm.gforge.inria.fr/svn/kermeta/tags/utilities.eclipse.jface-2.0.0</developerConnection>
+    	<developerConnection>scm:svn:svn+ssh://scm.gforge.inria.fr/svn/kermeta/tags/utilities.eclipse.jface-2.0.0</developerConnection>
     	<url>http://gforge.inria.fr/scm/viewvc.php/tags/utilities.eclipse.jface-2.0.0?root=kermeta</url>
   	</scm>
 	
