--- a/utilities_projects/org.kermeta.utilities.eclipse.jface/pom.xml
+++ b/utilities_projects/org.kermeta.utilities.eclipse.jface/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.kermeta.utilities.eclipse</groupId>
   <artifactId>utilities.eclipse.jface</artifactId>
-  <version>2.0.0</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>Jface Utilities</name>
 	<build>
@@ -108,7 +108,7 @@
 	
     <scm>
     	<connection>scm:svn:http://scm.gforge.inria.fr/svn/kermeta/tags/utilities.eclipse.jface-2.0.0</connection>
-    	<developerConnection>scm:svn:svn+ssh://scm.gforge.inria.fr/svn/kermeta/tags/utilities.eclipse.jface-2.0.0</developerConnection>
+    	<developerConnection>scm:svn:https://scm.gforge.inria.fr/svn/kermeta/tags/utilities.eclipse.jface-2.0.0</developerConnection>
     	<url>http://gforge.inria.fr/scm/viewvc.php/tags/utilities.eclipse.jface-2.0.0?root=kermeta</url>
   	</scm>
 	
