git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12413 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 78c9bb07c33bf35bb16b2507e443dad3a035a384

--- a/utilities_projects/pom.xml
+++ b/utilities_projects/pom.xml
@@ -10,20 +10,34 @@
   	<name>Utilities projects</name>
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.0</version>
+				<configuration>
+				  <!-- <allowTimestampedSnapshots>true</allowTimestampedSnapshots> -->
+				  <autoVersionSubmodules>true</autoVersionSubmodules>
+				</configuration>
+			      </plugin>
 
 			 
 		</plugins>
 	</build>
 	
-	<dependencies>
-        
-	</dependencies>
 	
 	<modules>
     		<module>org.kermeta.utilities.eclipse.jface</module>
     		<module>fr.irisa.triskell.cache.utilities</module>
     		<module>org.kermeta.utils.provisionner4eclipse</module>
 	</modules>
+
+	<!-- <dependencies>
+    		<dependency>
+		      <groupId>org.kermeta.utilities</groupId>
+		      <artifactId>utilities.eclipse.jface</artifactId>
+    		</dependency>
+  	</dependencies> -->
+	
     	<scm>
     		<connection>scm:svn:http://scm.gforge.inria.fr/svn/kermeta/trunk/utilities_projects</connection>
     		<developerConnection>scm:svn:https://scm.gforge.inria.fr/svn/kermeta/trunk/utilities_projects</developerConnection>
