--- a/utilities_projects/org.kermeta.utils.provisionner4eclipse/pom.xml
+++ b/utilities_projects/org.kermeta.utils.provisionner4eclipse/pom.xml
@@ -93,7 +93,7 @@
         <dependency>
             <groupId>org.kermeta.utilities.eclipse</groupId>
             <artifactId>utilities.eclipse.jface</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>[2.0.0,3.0.0)</version>
         </dependency>
        
         <dependency>
