--- a/utilities_projects/org.kermeta.utilities.eclipse.jface/pom.xml
+++ b/utilities_projects/org.kermeta.utilities.eclipse.jface/pom.xml
@@ -71,17 +71,17 @@
         <dependency>
             <groupId>org.kermeta.eclipse</groupId>
             <artifactId>org.eclipse.core.runtime</artifactId>
-            <version>[3.5.0.v20090525,)</version>
+            <version>[3.5.0.v20090525,4.0.0.0)</version>
         </dependency>
         <dependency>
             <groupId>org.kermeta.eclipse</groupId>
             <artifactId>org.eclipse.equinox.common</artifactId>
-            <version>[3.5.1.R35x_v20090807-1100,)</version>
+            <version>[3.5.1.R35x_v20090807-1100,4.0.0.0)</version>
         </dependency>
         <dependency>
             <groupId>org.kermeta.eclipse</groupId>
             <artifactId>org.eclipse.jface</artifactId>
-            <version>[3.5.2.M20100120-0800,)</version>
+            <version>[3.5.2.M20100120-0800,4.0.0.0)</version>
         </dependency>
         <dependency>
             <groupId>org.kermeta.eclipse</groupId>
