git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12419 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: f53e30661e76feeedcc56c711edd548e1adff446

--- a/utilities_projects/pom.xml
+++ b/utilities_projects/pom.xml
@@ -27,8 +27,8 @@
 	
 	<modules>
     		<module>org.kermeta.utilities.eclipse.jface</module>
-    	<!-- 	<module>fr.irisa.triskell.cache.utilities</module>
-    		<module>org.kermeta.utils.provisionner4eclipse</module> -->
+    	 	<module>fr.irisa.triskell.cache.utilities</module>
+    		<module>org.kermeta.utils.provisionner4eclipse</module> 
 	</modules>
 
 	<!-- <dependencies>
