--- a/utilities_projects/org.kermeta.utils.provisionner4eclipse/pom.xml
+++ b/utilities_projects/org.kermeta.utils.provisionner4eclipse/pom.xml
@@ -146,7 +146,7 @@
         <dependency>
             <groupId>org.kermeta.eclipse</groupId>
             <artifactId>org.eclipse.swt</artifactId>
-            <version>[3.5.2.v3557f,4.0.0.0)</version>
+            <version>[3.5.2.v3557f,)</version>
         </dependency>
         <dependency>
             <groupId>org.kermeta.eclipse</groupId>
