git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12424 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: c7796846a658728785a1765db5b163158a8077a6

--- a/utilities_projects/pom.xml
+++ b/utilities_projects/pom.xml
@@ -10,17 +10,15 @@
   	<name>Utilities projects</name>
 	<build>
 		<plugins>
-		<!-- 	<plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.0</version>
 				<configuration>
-				  <allowTimestampedSnapshots>true</allowTimestampedSnapshots> 
+				<!--   <allowTimestampedSnapshots>true</allowTimestampedSnapshots> --> 
 				  <autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
-			      </plugin>
-
-			--> 
+			</plugin> 
 		</plugins>
 	</build>
 	
