--- a/utilities_projects/pom.xml
+++ b/utilities_projects/pom.xml
@@ -13,7 +13,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.0</version>
+				<version>2.0-beta-9</version>
 				<configuration>
 				<!--   <allowTimestampedSnapshots>true</allowTimestampedSnapshots> --> 
 				  <autoVersionSubmodules>true</autoVersionSubmodules>
