--- a/utilities_projects/pom.xml
+++ b/utilities_projects/pom.xml
@@ -13,6 +13,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
+				<!-- version 2.0 doesn't work correctly with version range, need to wait the fix  -->
 				<version>2.0-beta-9</version>
 				<configuration>
 				<!--   <allowTimestampedSnapshots>true</allowTimestampedSnapshots> --> 
