git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12432 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 49a7ee2d0bf8ed09781183416cb256343479abc8

--- a/art2_projects/org.kermeta.art2.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.root/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.1</version>
+        </dependency>
     </dependencies>
 
 
@@ -149,7 +154,10 @@
             <id>triskellPublicNexus</id>
             <url>http://tipimouss.irisa.fr:8081/nexus/content/groups/public</url>
         </repository>
-
+        <repository>
+            <id>jboss public</id>
+            <url>http://repository.jboss.org/nexus/content/groups/public-jboss</url>
+        </repository>
     </repositories>
 
 
