git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12437 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 94d2103fdd59b8516c7305782faa191709abb37f

--- a/art2_projects/org.kermeta.art2.kompare/pom.xml
+++ b/art2_projects/org.kermeta.art2.kompare/pom.xml
@@ -17,30 +17,17 @@
 
     <build>
         <plugins>
+
             <plugin>
-                <groupId>org.scala-tools</groupId>
-                <artifactId>maven-scala-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>scala-compile-first</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>scala-test-compile</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
                 <configuration>
-                    <jvmArgs>
-                        <jvmArg>-Xmx1024m</jvmArg>
-                    </jvmArgs>
+                    <instructions>
+                        <Bundle-Activator>org.kermeta.art2.kompare.Art2KompareActivator</Bundle-Activator>
+                        <Export-Package>org.kermeta.art2.kompare.*</Export-Package>
+                        <Import-Package>*</Import-Package>
+                    </instructions>
                 </configuration>
             </plugin>
         </plugins>
@@ -67,6 +54,11 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.framework</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.core</artifactId>
+            <version>4.2.0</version>
         </dependency>
     </dependencies>
 </project>
