git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12443 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: f8f316d49be7f3bff051d7cfb07d9669bee796cd

--- a/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>art2.artcomponent.root</artifactId>
     <packaging>pom</packaging>
     <version>2</version>
-    <name>ART2 :: Root</name>
+    <name>ART2 :: ArtComponent</name>
     <url>http://maven.apache.org</url>
 
     <parent>
@@ -45,7 +45,7 @@
         </plugins>
     </build>
 
-	<dependencies>
+    <dependencies>
 		<!-- all ART components will need ART2 to compile -->
         <dependency>
             <groupId>org.kermeta.art2</groupId>
@@ -57,19 +57,7 @@
             <artifactId>art2.framework</artifactId>
             <version>${art2.version}</version>
         </dependency>
-	</dependencies>
+    </dependencies>
 
-    <repositories>
-        <repository>
-            <id>triskellPublic</id>
-            <url>http://tipimouss.irisa.fr/maven2</url>
-        </repository>
-        <repository>
-            <id>triskellPublicSnapShots</id>
-            <url>http://tipimouss.irisa.fr/maven2-snapshots</url>
-        </repository>
-    </repositories>
-    <distributionManagement>
-    </distributionManagement>
 
 </project>
