--- a/art2_projects/org.kermeta.art2.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.root/pom.xml
@@ -14,6 +14,7 @@
         <art2.version>2.0.0-SNAPSHOT</art2.version>
         <emf.version>2.6.0</emf.version>
         <scala.version>2.8.0</scala.version>
+        <slf4j.version>1.6.1</slf4j.version>
         <bundle.vendor>IRISA/INRIA</bundle.vendor>
     </properties>
     
@@ -32,7 +33,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.6.1</version>
+            <version>${slf4j.version}</version>
         </dependency>
     </dependencies>
 
@@ -44,7 +45,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
+                <version>2.3.2</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
@@ -69,6 +70,7 @@
             </plugin>
 
             <!-- Synch MANIFEST for eclipse user -->
+            <!--
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <executions>
@@ -87,6 +89,7 @@
                     </execution>
                 </executions>
             </plugin>
+            -->
 
             <!-- Scala plugin : allow to compile Scala file -->
             <plugin>
