--- a/art2_projects/pom.xml
+++ b/art2_projects/pom.xml
@@ -2,62 +2,69 @@
 <!-- License    : EPL 									 -->
 <!-- Copyright  : IRISA / INRIA / Universite de Rennes 1 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-  	<groupId>org.kermeta.art2</groupId>
-  	<artifactId>art2_projects</artifactId>
-  	<version>2.0.0-SNAPSHOT</version>
-  	<packaging>pom</packaging>
-  	<name>Utilities projects</name>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.kermeta.art2</groupId>
+    <artifactId>art2_projects</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>Art2 :: Projects</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
 				<!-- version 2.0 doesn't work correctly with version range, need to wait the fix  -->
-				<version>2.0-beta-9</version>
-				<configuration>
+                <version>2.0-beta-9</version>
+                <configuration>
 				<!--   <allowTimestampedSnapshots>true</allowTimestampedSnapshots> --> 
-				  <autoVersionSubmodules>true</autoVersionSubmodules>
-				</configuration>
-			</plugin> 
-		</plugins>
-	</build>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 	
 	
-	<modules> 
-		<module>org.kermeta.art2.root</module>
-		<module>org.kermeta.art2.model</module>
-	</modules>
+    <modules>
+        <module>org.kermeta.art2.root</module>
+        <module>org.kermeta.art2.model</module>
+        <module>org.kermeta.art2.adaptation.model</module>
+        <module>org.kermeta.art2.api</module>
+        <module>org.kermeta.art2.core</module>
+        <module>org.kermeta.art2.framework</module>
+        <module>org.kermeta.art2.framework.bus.netty</module>
+        <module>org.kermeta.art2.deploy.osgi</module>
+        <module>org.kermeta.art2.kompare</module>
+    </modules>
 
 	
     <scm>
-    		<connection>scm:svn:http://scm.gforge.inria.fr/svn/kermeta/trunk/art2_projects</connection>
-    		<developerConnection>scm:svn:https://scm.gforge.inria.fr/svn/kermeta/trunk/art2_projects</developerConnection>
-    		<url>http://gforge.inria.fr/scm/viewvc.php/trunk/art2_projects?root=kermeta</url>
-  	</scm>
+        <connection>scm:svn:http://scm.gforge.inria.fr/svn/kermeta/trunk/art2_projects</connection>
+        <developerConnection>scm:svn:https://scm.gforge.inria.fr/svn/kermeta/trunk/art2_projects</developerConnection>
+        <url>http://gforge.inria.fr/scm/viewvc.php/trunk/art2_projects?root=kermeta</url>
+    </scm>
 	
-	<repositories>
-		<repository>
-		    <id>kermeta Public</id>
-		    <url>http://www.kermeta.org/maven2</url>
-		</repository>
-		<repository>
-		    <id>kermeta PublicSnapShots</id>
-		    <url>http://www.kermeta.org/maven2-snapshots</url>
-		</repository>
-     	</repositories>
-	<distributionManagement>
-		<repository>
-	      		<id>tipimouss-local-maven-repository</id>
-	      		<name>Tipimouss Local release repository</name>
-	      		<url>file:/var/www/html/maven2</url>
-	      		<uniqueVersion>false</uniqueVersion>
-    		</repository>
-	    	<snapshotRepository>
-	      		<id>tipimouss-local-maven-snapshot-repository</id>
-	      		<name>Tipimouss Local  snapshot repository</name>
-	      		<url>file:/var/www/html/maven2-snapshots</url>
-	      		<uniqueVersion>false</uniqueVersion>
-	    	</snapshotRepository>
-	</distributionManagement>
+    <repositories>
+        <repository>
+            <id>kermeta Public</id>
+            <url>http://www.kermeta.org/maven2</url>
+        </repository>
+        <repository>
+            <id>kermeta PublicSnapShots</id>
+            <url>http://www.kermeta.org/maven2-snapshots</url>
+        </repository>
+    </repositories>
+    <distributionManagement>
+        <repository>
+            <id>tipimouss-local-maven-repository</id>
+            <name>Tipimouss Local release repository</name>
+            <url>file:/var/www/html/maven2</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
+        <snapshotRepository>
+            <id>tipimouss-local-maven-snapshot-repository</id>
+            <name>Tipimouss Local  snapshot repository</name>
+            <url>file:/var/www/html/maven2-snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
