--- a/art2_projects/pom.xml
+++ b/art2_projects/pom.xml
@@ -26,6 +26,7 @@
 	
     <modules>
         <module>org.kermeta.art2.root</module>
+        <module>org.kermeta.art2.annotation</module>
         <module>org.kermeta.art2.model</module>
         <module>org.kermeta.art2.adaptation.model</module>
         <module>org.kermeta.art2.api</module>
