git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12456 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 6d426039d98f64424190e474e5f90389fbb98d6b

--- a/art2_projects/org.kermeta.art2.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.model/pom.xml
@@ -9,7 +9,7 @@
     <packaging>bundle</packaging>
 
 
-    <groupId>${parent.groupId}</groupId>
+    <groupId>${project.parent.groupId}</groupId>
     <version>${art2.version}</version>
 
     <parent>
